# LLM-Portofolio

./: .env.example  README.md  environment.yaml  requirements.txt
langgraph_deepresearch/deep_research/: __init__.py
langgraph_deepresearch/notebook/: scope.ipynb  utils.py
mcp-notebook/mcp-langchain-adapter/: langchain_client.py  main.py  prompt.py  pyproject.toml  resources.py
mcp-notebook/mcp-langchain-adapter/server/: weather_server.py
mcp-notebook/mcp-shell-server/: README.md  demo.py  pyproject.toml  server.py  test_client.py
notebook/: huggingface.ipynb  langchain.ipynb  langgraph.ipynb  ollama.ipynb
notebook/db/: memory.db  memory.db-shm  memory.db-wal
notebook/langchain/: langchain.ipynb
notebook/langchain/langchain-project/: pyproject.toml
notebook/langchain/langchain-project/notebook/: env_utils.py  fast_agent.ipynb  fundamentals.ipynb
notebook/langchain/langgraph-deployment/: docker-compose.yml
notebook/langchain/studio/: langgraph.json  parallelization.py  requirements.txt
notebook/langchain/studio/.langgraph_api/: .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
notebook/langgraph-deployment/: task_maistro.py
notebook/studio/: langgraph.json
notebook/studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
project/: streamlit-bot.py
project/Flask-AI/: app.py  llm.py  project.tldr
